--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,20 @@
-mod_name=DynamicTreesTheAether
-mod_version=1.0.14
-package_group=maxhyper.dynamictreestheaether
+modName=DynamicTreesBYG
+modId=dtbyg
+modVersion=1.1.0
+group=maxhyper.dtbyg
 
-mc_version=1.12.2
-forge_version=14.23.5.2860
-mappings_version=20171003-1.12
+mcVersion=1.19.2
+forgeVersion=43.2.0
+mappingsVersion=2022.11.27
+
+dynamicTreesVersion=1.2.0-BETA1
+dynamicTreesPlusVersion=1.1.2
+ccVersion=1.101.3
+suggestionProviderFixVersion=1.0.0
+
+versionType=release
+versionRecommended=true
+updateCheckerPath=Add-ons/TheAether.json
 
 org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
