Added skyroot tree and worldgen

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-modName=DynamicTreesBYG
-modId=dtbyg
+modName=DynamicTreesAether
+modId=dtaether
 modVersion=1.1.0
-group=maxhyper.dtbyg
+group=maxhyper.dtaether
 
 mcVersion=1.19.2
 forgeVersion=43.2.0
