Fixed crash and christmas trees generating

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -38,7 +38,7 @@ Compatibility Mod between Dynamic trees and The Aether
 
 [[dependencies.dtaether]]
     modId="dynamictreesplus"
-    mandatory=true
+    mandatory=false
     versionRange="[1.1.0,)"
     ordering="AFTER"
     side="BOTH"
