--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 modName=DynamicTreesAether
 modId=dtaether
-modVersion=1.3.0
+modVersion=1.3.0-BETA2
 group=maxhyper.dtaether
 
 mcVersion=1.20.1
@@ -9,12 +9,12 @@ forge_version_range=[47,)
 loader_version_range=[47,)
 mappingsVersion=2023.09.03
 
-dynamicTreesVersion=1.3.0-BETA6
-dynamicTreesPlusVersion=1.2.0-BETA1
+dynamicTreesVersion=1.3.0-BETA12
+dynamicTreesPlusVersion=1.2.0-BETA3
 ccVersion=1.111.0
 suggestionProviderFixVersion=1.0.0
 
-versionType=release
+versionType=beta
 versionRecommended=true
 updateCheckerPath=Add-ons/TheAether.json
 
