--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 modName=DynamicTreesAether
 modId=dtaether
-modVersion=1.3.0-BETA3
+modVersion=1.3.0
 group=maxhyper.dtaether
 
 mcVersion=1.20.1
@@ -14,7 +14,7 @@ dynamicTreesPlusVersion=1.2.0-BETA3
 ccVersion=1.111.0
 suggestionProviderFixVersion=1.0.0
 
-versionType=beta
+versionType=release
 versionRecommended=true
 updateCheckerPath=Add-ons/TheAether.json
 
